--- a/css/style.css
+++ b/css/style.css
@@ -39,7 +39,7 @@ body .cls-1 {
 /*---------------------------------------
   Banner Section        
 -----------------------------------------*/
-#Services,#service-icon,#values,#Career,#About_Us,#Contact_Us{
+#Services,#service-icon,#values,#Career,#About_Us,#Contact_Us,#Introductory{
   color: #44576d !important;
 }
 .part-two{
@@ -66,7 +66,7 @@ body .cls-1 {
   /* background-color: #dfebf7; */
   background: radial-gradient(circle,
       rgba(255, 255, 255, 0.176) 10%,
-      #dfebf7d2 70%);
+      #dfebf7 70%);
 }
 
 
@@ -80,13 +80,21 @@ body .cls-1 {
   font-weight: bold;
   /* text-shadow: 5px 10px 20px rgb(0, 0, 0); */
 }
+.banner h2{
+  color: #28353d !important;
+    text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.68);
+  }
+.banner h4{
+color: #28353d !important;
+  text-shadow: 1px 1px 3px rgba(0, 0, 0, 0.68);
+}
 
 .banner h1 {
-  margin-top: 80px;
+  /* margin-top: 80px; */
   /* margin-left: -345px; */
-  color: #28353d !important;
+  /* color: #28353d !important; */
   /* padding: 20px; */
-  text-shadow: 1px 1px 3px rgb(0, 0, 0);
+  /* text-shadow: 1px 1px 3px rgb(0, 0, 0); */
   /* animation-name: example;
     animation-duration: 2s;
     animation-timing-function: linear; */
@@ -94,10 +102,10 @@ body .cls-1 {
 
 .banner h2 {
   /* margin-left: 20px; */
-  margin-top: 140px;
-  color: #28353d !important;
+  /* margin-top: 140px; */
+  /* color: #28353d !important; */
   /* padding: 20px; */
-  text-shadow: 1px 2px 3px rgb(0, 0, 0);
+  /* text-shadow: 1px 2px 3px rgb(0, 0, 0); */
   /* animation-name: example; */
 }
 
@@ -110,6 +118,7 @@ body .cls-1 {
 
 .first-box {
   display: flex;
+  flex-direction: column;
   flex-wrap: wrap;
   align-items: center;
   justify-content: center;
@@ -118,10 +127,10 @@ body .cls-1 {
 
 
 
-.slide-left {
+/* .slide-left {
   position: absolute;
   left: 80%;
-  /* Start from outside the container */
+ 
   top: 50%;
   transform: translateY(-50%);
   animation: slideLeft 2s forwards;
@@ -130,7 +139,7 @@ body .cls-1 {
 .slide-right {
   position: absolute;
   right: 80%;
-  /* Start from outside the container */
+ 
   top: 50%;
   transform: translateY(-50%);
   animation: slideRight 2s forwards;
@@ -144,7 +153,7 @@ body .cls-1 {
 
   100% {
     left: 45%;
-    /* Move to the center */
+   
     transform: scale(1);
   }
 }
@@ -157,10 +166,10 @@ body .cls-1 {
 
   100% {
     right: 45%;
-    /* Move to the center */
+ 
     transform: scale(1);
   }
-}
+} */
 
 .pad-on-text {
   padding-left: 9px;
@@ -248,6 +257,70 @@ body .cls-1 {
   }
 }
 
+
+
+/* page 2 Introductory css */
+#Introductory{
+  /* height: 100vh; */
+  padding-top: 50px;
+  padding-bottom: 50px;
+  width: 100%;
+  /* background-color: #28353d; */
+  display: flex;
+  flex-direction: column;
+  align-items: center;
+  justify-content: center;
+  position: relative;
+}
+
+#Introductory .star-text{
+  position: absolute;
+  bottom: 0;
+  right: 0;
+  margin-bottom: 60px;
+  margin-right: 10px;
+}
+.intro-box{
+display: flex;
+flex-wrap: wrap;
+align-items: center;
+justify-content: space-around;
+
+}
+
+.intro-card{
+  height: 420px;
+  width: 300px;
+  padding-left: 20px;
+  padding-right: 20px;
+  border-radius: 30px;
+  margin-top: 10px;
+  background: radial-gradient(circle,
+  rgba(255, 255, 255, 0.176) 10%,
+  #dfebf7 70%);
+}
+.intro-ttl{
+  margin-top: 50px;
+  font-weight: 700;
+}
+.intro-card p{
+  font-size: 14px;
+  
+}
+.star-text{
+  font-size: 8px;
+  /* z-index: 1; */
+  /* margin-top: -100px; */
+  /* position: absolute; */
+}
+
+.intro-card span {
+  font-weight: 600;
+}
+.inrto-heading{
+  margin-top: 20px;
+  padding: 10px;
+}
 /* --------part two css ----------- */
 
 /* in parttwo row have extra margin on rightside */
@@ -255,16 +328,18 @@ body .cls-1 {
   margin-right: 0px !important;
 }
 
+
+
 .rounded-card {
   /* background: #e7eaf6; */
-  height: 350px;
+  height: 380px;
   border-radius: 20px;
   background-color: #dfebf7;
-  padding: 10px;
+  padding: 8px;
   margin-top: 10px;
   margin-bottom: 10px;
   margin-left: 10px;
-  
+
 }
 
 .rounded-card:hover {
@@ -357,7 +432,7 @@ body .cls-1 {
       rgba(255, 255, 255, 0.176) 10%,
       #dfebf7 70%);
   overflow: hidden;
-  height: 100vh;
+  /* height: 100vh; */
   /* padding-right: 80px;
   padding-left: 40px; */
   /* padding: 75px 50px; */
@@ -373,7 +448,7 @@ body .cls-1 {
 
 .description>h1 {
   font-family: "Tilt Neon", sans-serif;
-  font-size: clamp(2.3rem, 5vw, 4rem);
+  font-size: clamp(2.3rem, 5vw, 3.3rem);
   line-height: 1.1;
   /* margin-bottom: 30px; */
 }
@@ -429,6 +504,8 @@ padding: 15px;
   flex: 0 0 20%;
   height: 120px;
   width:120px;
+  /* border: .1px solid rgb(0, 0, 0); */
+  /* border: 0; */
   box-shadow: 0 3px 6px rgba(0, 0, 0, 0.354),
     inset 2px 3px 5px rgba(0, 0, 0, 0.144);
   /* animation: fadeIn 0.5s linear forwards;
@@ -495,8 +572,10 @@ background-repeat: no-repeat;
   border-radius: 50% 50% 0 50%;
   background-image: url(/img-bg/technologies/react.png);
   background-position: center;
-  background-size: 60%;
+  background-size: 65%;
   background-repeat: no-repeat;
+  background-color: #28353d;
+ 
 }
 
 .item:nth-child(8) {
@@ -541,7 +620,7 @@ background-position: center;
 
 .item:nth-child(12) {
   border-radius: 0% 50% 50% 50%;
-  background-color: #28353d;
+  /* background-color: #28353d; */
   
 }
 
@@ -573,10 +652,13 @@ background-position: center;
   justify-content: center;
   border: none;
 }
-
+#values p {
+  /* padding-bottom: initial !important; */
+  margin-bottom: 0% !important;
+}
 .main-title-pg3 {
-  margin-bottom: 15px;
-  margin-top: 50px;
+  margin-bottom: 10px;
+  margin-top: 20px;
 }
 
 .whitebox {
@@ -615,7 +697,7 @@ background-position: center;
   margin-top: 10px;
   margin-bottom: 10px;
   border-radius: 20px;
-  
+  height: 300px;
 }
 
 
@@ -725,10 +807,31 @@ page-6*/
   border: 0 !important;
   outline: hidden !important;
   transition: 0.3s;
+
 /* float: right; */
 }
 
+@keyframes bounce {
+  0% {
+      transform: scale(1);
+  }
+  30% {
+      transform: scale(1.2);
+  }
+  50% {
+      transform: scale(0.9);
+  }
+  70% {
+      transform: scale(1.1);
+  }
+  100% {
+      transform: scale(1);
+  }
+}
 
+.submit-btn:active {
+  animation: bounce 0.4s ease;
+}
 
 
 
@@ -754,8 +857,13 @@ page-6*/
 
 .navbar {
   /* padding:0 !important ; */
+  /* background-color: orange !important; */
+  /* background-color: #003366 !important; */
   background-color: transparent !important;
-  /* backdrop-filter: blur(10px); */
+  
+  /* background: rgb(170,199,215);
+background: linear-gradient(90deg, rgb(170, 199, 215) 0%, rgb(223, 235, 247) 43%); */
+  backdrop-filter: blur(5px);
   /* box-shadow: 2px 5px 15px #00000013; */
   --bs-navbar-padding-y: 0 !important;
 }
@@ -810,6 +918,7 @@ footer {
   width: 100%;
   /* height: 50px; */
   background-color: #aac7d7;
+  /* background-color: #dfebf7; */
   display: flex;
   align-items: center;
   justify-content: center;
@@ -839,11 +948,18 @@ footer {
 /* media queries for mobile phones*/
 @media only screen and (max-width:600px) {
 
+  .description{
+    padding: 20px !important;
+  }
   .arrow-icon{
     /* bottom: 180px; */
     bottom: 11px;
     z-index: 999;
 
+  }
+  #Introductory .star-text{
+    margin-bottom: 0;
+    
   }
 
   .btn-box{
@@ -854,8 +970,8 @@ footer {
     /* --bs-card-spacer-y: 0rem; 
     --bs-card-spacer-x: 0rem; */
     /* padding: 20px; */
-    padding: 0px;
-    height: 360px;
+    padding: 10px;
+    /* height: 400px; */
   }
   .pad-on-text {
     padding-left: 14px;
@@ -872,6 +988,12 @@ footer {
     /* box-shadow: 2px 4px 5px rgb(0, 0, 0); */
   }
 
+  /* .main-title{
+    padding-left: 100px !important;
+    padding-right: 100px !important;
+    padding-top: 15px;
+  } */
+  
   .ds {
 
     font-size: 1.5rem;
@@ -889,10 +1011,18 @@ footer {
     margin-right: -90px;
   }
 
-  .banner h2 {
-    margin-left: -125px;
-    margin-top: 110px;
+  .banner h4 {
+    /* margin-left: -125px; */
+    /* margin-top: 110px; */
+text-align: center;
+font-size: 15px;
+  }
 
+  .banner h2 {
+    /* margin-left: -125px; */
+    margin-top: 110px;
+text-align: center;
+font-size: 22px;
   }
 
   .item {
@@ -913,6 +1043,7 @@ footer {
   }
 
   #service-icon {
+    height: 100vh;
     /* padding-right: 50px;
     padding-left: 50px; */
     /* margin-left: -15px; */
@@ -962,8 +1093,8 @@ footer {
   }
 
   .word-change p {
-    margin-top: -50px;
-    margin-left: 55px;
+    margin-top: 50px;
+    /* margin-left: 55px; */
     /* text-align: center; */
   }
 
@@ -1091,5 +1222,12 @@ footer {
     padding-right: 20px; */
   }
 
+  .rounded-card{
+    height: 400px;
+    padding: 0%;
+  }
   
+  #Introductory{
+    /* padding: 15px; */
+  }
 }
